<resources>
    <string name="app_name">HackPoint</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_welcome">Добро пожаловать!</string>
    <string name="info">HackPoint - оценОчка проектов твоего хакатона на кончиках пальцев</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="empty_value">Заполните поле</string>
    <string name="things_stand">Вот так обстоят дела</string>
    <string name="done">завершен</string>
    <string name="in_process">в процессе</string>
    <string name="result">Результаты</string>
    <string name="grade">Оценка</string>
    <string name="commands">Команды</string>
    <string name="choose_command_grade">Выберите команду для оценки</string>
    <string name="hello">Привет, %s</string>
    <string name="choose_and_swipe">Выбирай и свайпай</string>
</resources>