<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.SignInFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            app:srcCompat="@drawable/logo"
            android:adjustViewBounds="true"
            android:padding="8dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:textSize="26sp"
            android:text="@string/title_welcome"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="58dp"
            android:layout_marginTop="11dp"
            android:text="@string/info"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            app:layout_constraintTop_toBottomOf="@id/info"
            android:hint="@string/login"
            app:errorEnabled="true"
            app:endIconTint="@color/color"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="58dp"
            app:endIconDrawable="@drawable/ic_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            style="@style/Widget.Design.TextInputLayout"
            android:hint="@string/password"
            android:layout_marginTop="6dp"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="58dp"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/wrong_login_or_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@id/error"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="58dp"
            android:textColor="@color/white"
            android:background="@drawable/background_button"
            app:fontFamily="@font/roboto_bold"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>